Basic record suppport
* record.xsl: added
  This only support unnamed slots.

* record.xspec: added

Notice the documentation style: all sentences and clauses of compound
sentences are on their own lines, indented relative to their parent.  This
produces much better diffs when things change.

--- a/doc/macros.texi
+++ b/doc/macros.texi
@@ -23,3 +23,11 @@
 @macro xmlcomment{comment}
 <!-- \comment\ -->
 @end macro
+
+@macro mdash{}
+---
+@end macro
+
+@macro todo{text}
+@strong{TODO:} \text\
+@end macro
