--- a/doc/hoxsl.texi
+++ b/doc/hoxsl.texi
@@ -45,7 +45,8 @@ Free Documentation License".
 @include macros.texi
 
 @menu
-* Higher-Order Functions::  XSLT 2.0 compatible higher-order functions
+* Higher-Order Functions::  XSLT 2.0-compatible higher-order functions
+* Records::                 Structured data within sequences
 * Node Constructors::       Constructing nodes functionally
 * License::                 Document License
 @end menu
@@ -58,6 +59,10 @@ Free Documentation License".
 @node Higher-Order Functions
 @chapter Higher-Order Functions
 @include ../src/apply.texi
+
+@node Records
+@chapter Records
+@include ../src/record.texi
 
 @node Node Constructors
 @chapter Node Constructors
