--- a/doc/hoxsl.texi
+++ b/doc/hoxsl.texi
@@ -11,8 +11,8 @@
 @copying
 This manual is for hoxsl, version @value{VERSION}.
 
+Copyright @copyright{} 2015, 2016 Mike Gerwitz
 Copyright @copyright{} 2014, 2015 LoVullo Associates, Inc.
-Copyright @copyright{} 2015 Mike Gerwitz
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
